--- a/webapp/index.html
+++ b/webapp/index.html
@@ -36,7 +36,7 @@
     <h1>Maestro Vision Feed</h1>
     <div class="video-container">
         <!-- The visual-service port is exposed on localhost:5000 in docker-compose -->
-        <!-- Note: This assumes the browser can access localhost:5000.
+        <!-- Note: This assumes the browser can access localhost:5000.w
              In a real production environment, this should be proxied via Nginx. -->
         <img src="http://localhost:5000/video_feed" alt="Live Video Feed">
     </div>
